Fix select box overflow on mobile

--- a/users/static/css/style.scss
+++ b/users/static/css/style.scss
@@ -358,7 +358,10 @@ ul.timeline {
 
 .bootstrap-select {
     display: block !important;
-    width: unset !important;
+
+    .dropdown-item {
+        white-space: normal;
+    }
 }
 
 .custom_modal {
